--- a/src/app/type-racer/type-racer.component.html
+++ b/src/app/type-racer/type-racer.component.html
@@ -1,3 +1,12 @@
-<p>{{text}}</p>
-<input type="text" [(ngModel)]="title" (keyup.enter)="onEnter(title)">
+<p id="testText">{{text}}</p>
+<form #testForm="ngForm" (keyup.enter)="onEnter(testForm)">
+  <input
+  type="text"
+  ngModel
+  name="title"
+  >
+</form>
 <p>{{test}}</p>
+<div id="myText" class="red-text">Super cooler Text, der ursprünglich rot ist.</div>
+<button type="button" onclick="document.getElementById('myText').style.color = 'blue'">Drück mich für blauen text!</button>
+<button type="button" onclick="document.getElementById('testText').style.color='green'"></button>
