--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar color="primary">
   <a>Type Racer</a>
+  <span class="spacer"></span>
+  <button mat-raised-button routerLink="/">Go back</button>
 </mat-toolbar>
 <b></b>
