--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,5 @@
-<mat-toolbar color="primary">
-  <a>Type Racer</a>
+<mat-toolbar style="background-color:cornflowerblue">
+  <h1>Type Racer</h1>
   <span class="spacer"></span>
-  <button mat-raised-button routerLink="/">Go back</button>
+  <mat-icon class="home" aria-hidden="false" routerLink="/" fontIcon="home"></mat-icon>
 </mat-toolbar>
-<b></b>
