--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,2 +1,3 @@
-<button mat-raised-button color="primary" routerLink="/typeracer">Play</button>
-<button mat-raised-button color="primary">Settings</button>
+<button mat-raised-button class="mano" routerLink="/typeracer">Play</button>
+<button mat-raised-button class="mano" >Settings</button>
+
