--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<app-header></app-header>
-<main>
-  <router-outlet></router-outlet>
-</main>
+  <html>
+    <app-header></app-header>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </html>
+
