Angefangen mit Login Componente

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,15 @@
 <mat-toolbar style="background-color:cornflowerblue">
-  <h1>Type Racer</h1>
+  <span>
+    <h1>Type Racer</h1>
+  </span>
   <span class="spacer"></span>
-  <mat-icon class="home" aria-hidden="false" routerLink="/" fontIcon="home"></mat-icon>
+  <ul>
+    <li>
+      <b mat-button routerLink="/login">Login</b>
+    </li>
+    <span class="smallSpacer"></span>
+    <li>
+      <mat-icon class="home" aria-hidden="false" routerLink="/" fontIcon="home"></mat-icon>
+    </li>
+  </ul>
 </mat-toolbar>
