--- a/src/app/main-menu/main-menu.component.css
+++ b/src/app/main-menu/main-menu.component.css
@@ -3,11 +3,15 @@ button {
   width: 50%;
 }
 
-button.mano {
-  margin-top: 2%;
+button.menu {
+  padding: 30px;
   background-color: cornflowerblue;
   color: floralwhite;
-  display: block;
+  margin-top: 10px;
+}
+
+html {
+  padding-top: 50px;
 }
 
 
