--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,3 +1,8 @@
-<button mat-raised-button class="mano" routerLink="/typeracer">Play</button>
-<button mat-raised-button class="mano" >Settings</button>
+<html>
+  <button mat-raised-button class="menu" routerLink="/typeracer">Play</button>
+  <button mat-raised-button class="menu"></button>
+  <button mat-raised-button class="menu"></button>
+  <button mat-raised-button class="menu" >Settings</button>
+</html>
+
 
