--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -4,6 +4,12 @@ mat-form-field {
   width: 100%;
 }
 
+mat-card {
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 mat-spinner {
   margin: auto;
 }
