--- a/src/app/type-racer/type-racer.component.css
+++ b/src/app/type-racer/type-racer.component.css
@@ -1,5 +1,29 @@
 mat-card {
-  padding-top: 50px;
   margin-top: 40px;
-  background-color: rgba(220, 218, 218, 0.975);
+  width: 20%;
+}
+
+.Text {
+  font-size: large;
+}
+
+p {
+  font-size: large;
+}
+
+button.b {
+  background-color: cornflowerblue;
+  color: floralwhite;
+}
+
+button.b:disabled {
+  background-color: grey;
+}
+
+.hide {
+  display: none;
+}
+
+button.b:disabled + .hide {
+  display: block;
 }
