--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -1,8 +1,7 @@
 <html>
   <button mat-raised-button class="menu" routerLink="/typeracer">Play</button>
-  <button *ngIf="userIsAuthenticated" mat-raised-button class="menu"> Saved Games </button>
-  <button mat-raised-button class="menu"></button>
-  <button mat-raised-button class="menu" >Settings</button>
+  <button *ngIf="userIsAuthenticated" mat-raised-button class="menu" routerLink="/savedgames"> Personal Record </button>
+  <button mat-raised-button class="menu" routerLink="/leaderboard">Leaderboard</button>
 </html>
 
 
