--- a/src/app/leaderboard/leaderboard.component.html
+++ b/src/app/leaderboard/leaderboard.component.html
@@ -17,7 +17,7 @@
 
   <!-- Weight Column -->
   <ng-container matColumnDef="cpm">
-    <th mat-header-cell *matHeaderCellDef> cpm </th>
+    <th mat-header-cell *matHeaderCellDef> Characters per minute </th>
     <td mat-cell *matCellDef="let element"> {{element.cpm}} </td>
   </ng-container>
 
