--- a/src/app/saved-games/saved-games.component.html
+++ b/src/app/saved-games/saved-games.component.html
@@ -11,7 +11,7 @@
 
   <!-- Weight Column -->
   <ng-container matColumnDef="cpm">
-    <th mat-header-cell *matHeaderCellDef> Characters per Minute </th>
+    <th mat-header-cell *matHeaderCellDef> Characters per minute </th>
     <td mat-cell *matCellDef="let element"> {{element.cpm}} </td>
   </ng-container>
 
