--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,6 +6,10 @@
       <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
     </mat-form-field>
     <mat-form-field>
+      <input matInput name="uname" ngModel type="uname" placeholder="Username" #unameInput="ngModel" required>
+      <mat-error *ngIf="unameInput.invalid">Please enter a name.</mat-error>
+    </mat-form-field>
+    <mat-form-field>
       <input matInput type="password" name="password" ngModel placeholder="Password" #passwordInput="ngModel" required>
       <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
     </mat-form-field>
