--- a/src/app/saved-games/saved-games.component.html
+++ b/src/app/saved-games/saved-games.component.html
@@ -23,3 +23,5 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<button (click)="onButton()">dd</button>
